.metadata/.plugins/org.eclipse.cdt.ui/spidrv_master_baremetal.build.log
17:40:57 **** Incremental Build of configuration GNU ARM v10.3.1 - Default for project spidrv_master_baremetal ****
make -j16 all 
Building file: ../autogen/sl_spidrv_init.c
Building file: ../app.c
Invoking: GNU ARM C Compiler
arm-none-eabi-gcc -g3 -gdwarf-2 -mcpu=cortex-m33 -mthumb -std=c99 '-DDEBUG_EFM=1' '-DBGM220PC22HNA=1' '-DSL_COMPONENT_CATALOG_PRESENT=1' -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal\config" -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal\autogen" -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/Device/SiliconLabs/BGM22/Include" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/common/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//hardware/board/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/device_init/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/dmadrv/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/common/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/iostream/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/common/toolchain/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/system/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/sleeptimer/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/spidrv/inc" -Os -Wall -Wextra -fno-builtin -ffunction-sections -fdata-sections -imacrossl_gcc_preinclude.h -mfpu=fpv5-sp-d16 -mfloat-abi=hard -c -fmessage-length=0 -MMD -MP -MF"autogen/sl_spidrv_init.d" -MT"autogen/sl_spidrv_init.o" -o "autogen/sl_spidrv_init.o" "../autogen/sl_spidrv_init.c"
Invoking: GNU ARM C Compiler
arm-none-eabi-gcc -g3 -gdwarf-2 -mcpu=cortex-m33 -mthumb -std=c99 '-DDEBUG_EFM=1' '-DBGM220PC22HNA=1' '-DSL_COMPONENT_CATALOG_PRESENT=1' -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal\config" -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal\autogen" -I"C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/Device/SiliconLabs/BGM22/Include" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/common/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//hardware/board/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/device_init/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/dmadrv/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/common/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/iostream/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/common/toolchain/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/system/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/service/sleeptimer/inc" -I"C:/SiliconLabs/SimplicityStudio/v5/developer/sdks/gecko_sdk_suite/v3.2//platform/emdrv/spidrv/inc" -Os -Wall -Wextra -fno-builtin -ffunction-sections -fdata-sections -imacrossl_gcc_preinclude.h -mfpu=fpv5-sp-d16 -mfloat-abi=hard -c -fmessage-length=0 -MMD -MP -MF"app.d" -MT"app.o" -o "app.o" "../app.c"
In file included from ../autogen/sl_spidrv_init.c:6:
C:\Users\Wind\OneDrive\Desktop\test\spidrv_master_baremetal\config/sl_spidrv_exp_config.h:67:2: warning: #warning "SPIDRV USART peripheral not configured" [-Wcpp]
   67 | #warning "SPIDRV USART peripheral not configured"
      |  ^~~~~~~
../app.c: In function 'TransferComplete':
../app.c:26:39: warning: unused parameter 'handle' [-Wunused-parameter]
   26 | void TransferComplete(SPIDRV_Handle_t handle,
      |                       ~~~~~~~~~~~~~~~~^~~~~~
../app.c:28:27: warning: unused parameter 'itemsTransferred' [-Wunused-parameter]
   28 |                       int itemsTransferred)
      |                       ~~~~^~~~~~~~~~~~~~~~
../app.c: In function 'app_init':
../app.c:43:25: error: 'initData' undeclared (first use in this function)
   43 |    SPIDRV_Init(handle, &initData);
      |                         ^~~~~~~~
../app.c:43:25: note: each undeclared identifier is reported only once for each function it appears in
make: *** [subdir.mk:26: app.o] Error 1
make: *** Waiting for unfinished jobs....
../autogen/sl_spidrv_init.c:12:11: error: 'SL_SPIDRV_EXP_PERIPHERAL' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_CS_CONTROL'?
   12 |   .port = SL_SPIDRV_EXP_PERIPHERAL,
      |           ^~~~~~~~~~~~~~~~~~~~~~~~
      |           SL_SPIDRV_EXP_CS_CONTROL
../autogen/sl_spidrv_init.c:21:13: error: 'SL_SPIDRV_EXP_TX_PORT' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_TYPE'?
   21 |   .portTx = SL_SPIDRV_EXP_TX_PORT,
      |             ^~~~~~~~~~~~~~~~~~~~~
      |             SL_SPIDRV_EXP_TYPE
../autogen/sl_spidrv_init.c:22:13: error: 'SL_SPIDRV_EXP_RX_PORT' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_TYPE'?
   22 |   .portRx = SL_SPIDRV_EXP_RX_PORT,
      |             ^~~~~~~~~~~~~~~~~~~~~
      |             SL_SPIDRV_EXP_TYPE
../autogen/sl_spidrv_init.c:23:14: error: 'SL_SPIDRV_EXP_CLK_PORT' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_CLOCK_MODE'?
   23 |   .portClk = SL_SPIDRV_EXP_CLK_PORT,
      |              ^~~~~~~~~~~~~~~~~~~~~~
      |              SL_SPIDRV_EXP_CLOCK_MODE
../autogen/sl_spidrv_init.c:27:12: error: 'SL_SPIDRV_EXP_TX_PIN' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_TYPE'?
   27 |   .pinTx = SL_SPIDRV_EXP_TX_PIN,
      |            ^~~~~~~~~~~~~~~~~~~~
      |            SL_SPIDRV_EXP_TYPE
../autogen/sl_spidrv_init.c:28:12: error: 'SL_SPIDRV_EXP_RX_PIN' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_TYPE'?
   28 |   .pinRx = SL_SPIDRV_EXP_RX_PIN,
      |            ^~~~~~~~~~~~~~~~~~~~
      |            SL_SPIDRV_EXP_TYPE
../autogen/sl_spidrv_init.c:29:13: error: 'SL_SPIDRV_EXP_CLK_PIN' undeclared here (not in a function); did you mean 'SL_SPIDRV_EXP_CLOCK_MODE'?
   29 |   .pinClk = SL_SPIDRV_EXP_CLK_PIN,
      |             ^~~~~~~~~~~~~~~~~~~~~
      |             SL_SPIDRV_EXP_CLOCK_MODE
make: *** [autogen/subdir.mk:70: autogen/sl_spidrv_init.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

17:40:57 Build Failed. 11 errors, 3 warnings. (took 460ms)

